# acore-server/src/main/java/net/kwas/acore/server/item_template/ItemTemplate.java
@@ -1,11 +1,0 @@
-package net.kwas.acore.server.item_template;
-
-import java.net.URI;
-
-public record ItemTemplate(
-  long id,
-  String name,
-  String description,
-  URI iconUrl
-) {
-}
