# acore-server/src/main/java/net/kwas/acore/server/item_template/ItemTemplateController.java
@@ -1,13 +1,16 @@
 package net.kwas.acore.server.item_template;
 
+import net.kwas.acore.server.api.ItemTemplateApi;
+import net.kwas.acore.server.model.ItemTemplate;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.Collection;
+import java.util.List;
 
 @RestController
-public class ItemTemplateController {
+public class ItemTemplateController implements ItemTemplateApi {
 
   private final ItemTemplateDatabase db;
 
@@ -15,24 +18,14 @@ public class ItemTemplateController {
     this.db = db;
   }
 
-  @GetMapping("/api/item-template")
-  public Collection<ItemTemplate> getItemTemplates() {
+  @Override
+  public ItemTemplate getItemTemplate(Long itemTemplateId) {
+    return db.getById(itemTemplateId);
+  }
+
+  @Override
+  public List<ItemTemplate> getItemTemplates() {
     return db.getAll();
-  }
-
-  @GetMapping("/api/item-template/{id}")
-  public ItemTemplate getItemTemplate(@PathVariable long id) {
-    return db.getById(id);
-  }
-
-  @GetMapping("/api/item-template/{id}/name")
-  public String getItemTemplateName(@PathVariable long id) {
-    return db.getById(id).name();
-  }
-
-  @GetMapping("/api/item-template/{id}/description")
-  public String getItemTemplateDescription(@PathVariable long id) {
-    return db.getById(id).description();
   }
 
 }
